<resources>
    <string name="app_name">calculator</string>

    <string name="b1">1</string>
    <string name="b2">2</string>
    <string name="b3">3</string>
    <string name="b4">4</string>
    <string name="b5">5</string>
    <string name="b6">6</string>
    <string name="b7">7</string>
    <string name="b8">8</string>
    <string name="b9">9</string>
    <string name="b0">0</string>

    <string name="b_add">+</string>
    <string name="b_sub">-</string>
    <string name="b_mul">*</string>
    <string name="b_div">/</string>
    <string name="b_equal">=</string>

    <string name="b_dot">.</string>
    <string name="b_sign">+/-</string>
    <string name="b_paral">(</string>
    <string name="b_parar">)</string>
    <string name="b_clear">C</string>

</resources>