<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/e"
        style="@style/EDITTEXT"
        android:layout_width="match_parent"
        android:layout_height="208dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="text"

        android:textAlignment="center"
        android:textSize="80sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="416dp"
        android:layout_height="515dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/e"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:text="@string/b_clear"
                style="@style/BUTTON"
                />
            <Button
                android:text="@string/b_paral"
                style="@style/BUTTON"
                />

            <Button
                android:text="@string/b_parar"
                style="@style/BUTTON"
                />

            <Button
                android:id="@+id/B_ADD"
                style="@style/BUTTON"
                android:text="@string/b_add" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/B1"
                style="@style/BUTTON"
                android:text="@string/b1" />

            <Button
                android:id="@+id/B2"
                style="@style/BUTTON"
                android:text="@string/b2" />

            <Button
                android:id="@+id/B3"
                style="@style/BUTTON"
                android:text="@string/b3" />

            <Button
                android:id="@+id/B_SUB"
                style="@style/BUTTON"
                android:text="@string/b_sub" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/B4"
                style="@style/BUTTON"
                android:text="@string/b4" />

            <Button
                android:id="@+id/B5"
                style="@style/BUTTON"
                android:text="@string/b5" />

            <Button
                android:id="@+id/B6"
                style="@style/BUTTON"
                android:text="@string/b6" />

            <Button
                android:id="@+id/B_MUL"
                style="@style/BUTTON"
                android:text="@string/b_mul" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/B7"
                style="@style/BUTTON"
                android:text="@string/b7" />

            <Button
                android:id="@+id/B8"
                style="@style/BUTTON"
                android:text="@string/b8" />

            <Button
                android:id="@+id/B9"
                style="@style/BUTTON"
                android:text="@string/b9" />

            <Button
                android:id="@+id/B_DIV"
                style="@style/BUTTON"
                android:text="@string/b_div" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:text="@string/b_sign"
                style="@style/BUTTON"
                />

            <Button
                android:id="@+id/B0"
                style="@style/BUTTON"
                android:text="@string/b0" />

            <Button
                android:id="@+id/B_DOT"
                style="@style/BUTTON"
                android:text="@string/b_dot" />

            <Button
                android:id="@+id/B_ANS"
                style="@style/BUTTON"
                android:text="@string/b_equal" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>